.gitignore: 加入savedconfig和make.profile README: 加入README make.conf: -qt5 scripts: proxychains sets: mini,pre加入proxychains, desktop-xfce初始化

--- a/make.conf
+++ b/make.conf
@@ -15,7 +15,7 @@ ACCEPT_KEYWORDS="~amd64"
 LC_MESSAGES=C.utf8
 #GENTOO_MIRRORS="rsync://127.0.0.1/repo/gentoo/"
 GENTOO_MIRRORS="rsync://mirror.nju.edu.cn/gentoo/"
-USE="systemd -gnome screencast wayland  qt5 kde dvd cdr acl alsa jack pulseaudio bluetooth wayland browser-integration networkmanager  pipewire  screencast grub gstreamer"
+USE="-qt5 systemd -gnome screencast wayland  kde dvd cdr acl alsa jack pulseaudio bluetooth wayland browser-integration networkmanager  pipewire  screencast grub gstreamer"
 VIDEO_CARDS="amdgpu radeonsi"
 MAKEOPTS="-j20"
 
